@@ -36,13 +36,13 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 class ImportedFunctions: NonCopyable
 {
 private:
-	class module
+	class module: NonCopyable
 	{
 	public:
-		module(const wchar_t* name);
+		module(const wchar_t* name): m_name(name), m_module(), m_loaded() {}
 		~module();
 
-		FARPROC GetProcAddress(const char* name) const;
+		FARPROC GetProcAddress(const char* name) const { return ::GetProcAddress(get_module(), name); }
 		operator bool() const { return get_module() != nullptr; }
 
 	private:
@@ -54,16 +54,14 @@ private:
 	};
 
 	template<typename T, class Y, T stub>
-	class function_pointer
+	class function_pointer: NonCopyable
 	{
 	public:
+		function_pointer(module& Module): m_module(Module) {}
 		operator T() const { return get_pointer(); }
 		bool exists() const { return get_pointer() != stub; }
 
 	private:
-		friend class ImportedFunctions;
-
-		function_pointer(module& Module): m_module(Module) {}
 		T get_pointer() const
 		{
 			static T dyn_pointer = reinterpret_cast<T>(m_module.GetProcAddress(Y::get()));
@@ -72,7 +70,7 @@ private:
 			return pointer;
 		}
 
-		module& m_module;
+		const module& m_module;
 	};
 
 	module m_ntdll;
@@ -83,61 +81,61 @@ private:
 	module m_rstrtmgr;
 	module m_netapi32;
 
-#define DECLARE_IMPORT_FUNCTION(RETTYPE, CALLTYPE, NAME, ARGS)\
-private: static RETTYPE CALLTYPE stub_##NAME ARGS;\
+#define DECLARE_IMPORT_FUNCTION(RETTYPE, CALLTYPE, NAME, ...)\
+private: static RETTYPE CALLTYPE stub_##NAME(__VA_ARGS__);\
 private: struct name_##NAME { static const char* get() { return #NAME; } };\
-public: function_pointer<decltype(&ImportedFunctions::stub_##NAME), name_##NAME, ImportedFunctions::stub_##NAME> NAME;\
+public: function_pointer<decltype(&ImportedFunctions::stub_##NAME), name_##NAME, ImportedFunctions::stub_##NAME> NAME;
 
 	// ntdll
-	DECLARE_IMPORT_FUNCTION(NTSTATUS, NTAPI, NtQueryDirectoryFile, (HANDLE FileHandle, HANDLE Event, PVOID ApcRoutine, PVOID ApcContext, PIO_STATUS_BLOCK IoStatusBlock, PVOID FileInformation, ULONG Length, FILE_INFORMATION_CLASS FileInformationClass, BOOLEAN ReturnSingleEntry, PUNICODE_STRING FileName, BOOLEAN RestartScan));
-	DECLARE_IMPORT_FUNCTION(NTSTATUS, NTAPI, NtQueryInformationFile, (HANDLE FileHandle, PIO_STATUS_BLOCK IoStatusBlock, PVOID FileInformation, ULONG Length, FILE_INFORMATION_CLASS FileInformationClass));
-	DECLARE_IMPORT_FUNCTION(NTSTATUS, NTAPI, NtSetInformationFile, (HANDLE FileHandle, PIO_STATUS_BLOCK IoStatusBlock, PVOID FileInformation, ULONG Length, FILE_INFORMATION_CLASS FileInformationClass));
-	DECLARE_IMPORT_FUNCTION(NTSTATUS, NTAPI, NtQueryObject, (HANDLE Handle, OBJECT_INFORMATION_CLASS ObjectInformationClass, PVOID ObjectInformation, ULONG ObjectInformationLength, PULONG ReturnLength));
-	DECLARE_IMPORT_FUNCTION(NTSTATUS, NTAPI, NtOpenSymbolicLinkObject, (PHANDLE LinkHandle, ACCESS_MASK DesiredAccess, POBJECT_ATTRIBUTES ObjectAttributes));
-	DECLARE_IMPORT_FUNCTION(NTSTATUS, NTAPI, NtQuerySymbolicLinkObject, (HANDLE LinkHandle, PUNICODE_STRING LinkTarget, PULONG ReturnedLength));
-	DECLARE_IMPORT_FUNCTION(NTSTATUS, NTAPI, NtClose, (HANDLE Handle));
-	DECLARE_IMPORT_FUNCTION(NTSTATUS, NTAPI, RtlGetLastNtStatus, ());
-	DECLARE_IMPORT_FUNCTION(NTSTATUS, NTAPI, RtlNtStatusToDosError, (NTSTATUS Status));
+	DECLARE_IMPORT_FUNCTION(NTSTATUS, NTAPI, NtQueryDirectoryFile, HANDLE FileHandle, HANDLE Event, PVOID ApcRoutine, PVOID ApcContext, PIO_STATUS_BLOCK IoStatusBlock, PVOID FileInformation, ULONG Length, FILE_INFORMATION_CLASS FileInformationClass, BOOLEAN ReturnSingleEntry, PUNICODE_STRING FileName, BOOLEAN RestartScan);
+	DECLARE_IMPORT_FUNCTION(NTSTATUS, NTAPI, NtQueryInformationFile, HANDLE FileHandle, PIO_STATUS_BLOCK IoStatusBlock, PVOID FileInformation, ULONG Length, FILE_INFORMATION_CLASS FileInformationClass);
+	DECLARE_IMPORT_FUNCTION(NTSTATUS, NTAPI, NtSetInformationFile, HANDLE FileHandle, PIO_STATUS_BLOCK IoStatusBlock, PVOID FileInformation, ULONG Length, FILE_INFORMATION_CLASS FileInformationClass);
+	DECLARE_IMPORT_FUNCTION(NTSTATUS, NTAPI, NtQueryObject, HANDLE Handle, OBJECT_INFORMATION_CLASS ObjectInformationClass, PVOID ObjectInformation, ULONG ObjectInformationLength, PULONG ReturnLength);
+	DECLARE_IMPORT_FUNCTION(NTSTATUS, NTAPI, NtOpenSymbolicLinkObject, PHANDLE LinkHandle, ACCESS_MASK DesiredAccess, POBJECT_ATTRIBUTES ObjectAttributes);
+	DECLARE_IMPORT_FUNCTION(NTSTATUS, NTAPI, NtQuerySymbolicLinkObject, HANDLE LinkHandle, PUNICODE_STRING LinkTarget, PULONG ReturnedLength);
+	DECLARE_IMPORT_FUNCTION(NTSTATUS, NTAPI, NtClose, HANDLE Handle);
+	DECLARE_IMPORT_FUNCTION(NTSTATUS, NTAPI, RtlGetLastNtStatus);
+	DECLARE_IMPORT_FUNCTION(NTSTATUS, NTAPI, RtlNtStatusToDosError, NTSTATUS Status);
 
 	// kernel32
-	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, GetConsoleKeyboardLayoutNameW, (LPWSTR Buffer))
-	DECLARE_IMPORT_FUNCTION(BOOLEAN, WINAPI, CreateSymbolicLinkW, (LPCWSTR SymlinkFileName, LPCWSTR TargetFileName, DWORD Flags));
-	DECLARE_IMPORT_FUNCTION(HANDLE, WINAPI, FindFirstFileNameW, (LPCWSTR FileName, DWORD Flags, LPDWORD StringLength, LPWSTR LinkName));
-	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, FindNextFileNameW, (HANDLE FindStream, LPDWORD StringLength, PWCHAR LinkName));
-	DECLARE_IMPORT_FUNCTION(HANDLE, WINAPI, FindFirstStreamW, (LPCWSTR FileName, STREAM_INFO_LEVELS InfoLevel, LPVOID FindStreamData, DWORD Flags));
-	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, FindNextStreamW, (HANDLE FindStream, LPVOID FindStreamData));
-	DECLARE_IMPORT_FUNCTION(DWORD, WINAPI, GetFinalPathNameByHandleW, (HANDLE File, LPWSTR FilePath, DWORD FilePathSize, DWORD Flags));
-	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, GetVolumePathNamesForVolumeNameW, (LPCWSTR VolumeName, LPWSTR VolumePathNames, DWORD BufferLength, PDWORD ReturnLength));
-	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, GetPhysicallyInstalledSystemMemory, (PULONGLONG TotalMemoryInKilobytes));
-	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, HeapSetInformation, (HANDLE HeapHandle, HEAP_INFORMATION_CLASS HeapInformationClass, PVOID HeapInformation, SIZE_T HeapInformationLength));
-	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, IsWow64Process, (HANDLE Process, PBOOL Wow64Process));
-	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, GetNamedPipeServerProcessId, (HANDLE Pipe, PULONG ServerProcessId));
-	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, CancelSynchronousIo, (HANDLE Thread));
-	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, SetConsoleKeyShortcuts, (BOOL Set, BYTE ReserveKeys, LPVOID AppKeys, DWORD NumAppKeys));
-	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, GetConsoleScreenBufferInfoEx, (HANDLE ConsoleOutput, PCONSOLE_SCREEN_BUFFER_INFOEX ConsoleScreenBufferInfoEx));
-	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, QueryFullProcessImageNameW, (HANDLE Process, DWORD Flags, LPWSTR ExeName, PDWORD Size));
-	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, TzSpecificLocalTimeToSystemTime, (const TIME_ZONE_INFORMATION* TimeZoneInformation, const SYSTEMTIME* LocalTime, LPSYSTEMTIME UniversalTime));
+	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, GetConsoleKeyboardLayoutNameW, LPWSTR Buffer);
+	DECLARE_IMPORT_FUNCTION(BOOLEAN, WINAPI, CreateSymbolicLinkW, LPCWSTR SymlinkFileName, LPCWSTR TargetFileName, DWORD Flags);
+	DECLARE_IMPORT_FUNCTION(HANDLE, WINAPI, FindFirstFileNameW, LPCWSTR FileName, DWORD Flags, LPDWORD StringLength, LPWSTR LinkName);
+	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, FindNextFileNameW, HANDLE FindStream, LPDWORD StringLength, PWCHAR LinkName);
+	DECLARE_IMPORT_FUNCTION(HANDLE, WINAPI, FindFirstStreamW, LPCWSTR FileName, STREAM_INFO_LEVELS InfoLevel, LPVOID FindStreamData, DWORD Flags);
+	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, FindNextStreamW, HANDLE FindStream, LPVOID FindStreamData);
+	DECLARE_IMPORT_FUNCTION(DWORD, WINAPI, GetFinalPathNameByHandleW, HANDLE File, LPWSTR FilePath, DWORD FilePathSize, DWORD Flags);
+	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, GetVolumePathNamesForVolumeNameW, LPCWSTR VolumeName, LPWSTR VolumePathNames, DWORD BufferLength, PDWORD ReturnLength);
+	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, GetPhysicallyInstalledSystemMemory, PULONGLONG TotalMemoryInKilobytes);
+	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, HeapSetInformation, HANDLE HeapHandle, HEAP_INFORMATION_CLASS HeapInformationClass, PVOID HeapInformation, SIZE_T HeapInformationLength);
+	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, IsWow64Process, HANDLE Process, PBOOL Wow64Process);
+	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, GetNamedPipeServerProcessId, HANDLE Pipe, PULONG ServerProcessId);
+	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, CancelSynchronousIo, HANDLE Thread);
+	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, SetConsoleKeyShortcuts, BOOL Set, BYTE ReserveKeys, LPVOID AppKeys, DWORD NumAppKeys);
+	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, GetConsoleScreenBufferInfoEx, HANDLE ConsoleOutput, PCONSOLE_SCREEN_BUFFER_INFOEX ConsoleScreenBufferInfoEx);
+	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, QueryFullProcessImageNameW, HANDLE Process, DWORD Flags, LPWSTR ExeName, PDWORD Size);
+	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, TzSpecificLocalTimeToSystemTime, const TIME_ZONE_INFORMATION* TimeZoneInformation, const SYSTEMTIME* LocalTime, LPSYSTEMTIME UniversalTime);
 
 	// shell32
-	DECLARE_IMPORT_FUNCTION(HRESULT, STDAPICALLTYPE, SHCreateAssociationRegistration, (REFIID riid, void ** ppv));
+	DECLARE_IMPORT_FUNCTION(HRESULT, STDAPICALLTYPE, SHCreateAssociationRegistration, REFIID riid, void** ppv);
 
 	// user32
-	DECLARE_IMPORT_FUNCTION(HPOWERNOTIFY, WINAPI, RegisterPowerSettingNotification, (HANDLE hRecipient, LPCGUID PowerSettingGuid, DWORD Flags));
-	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, UnregisterPowerSettingNotification, (HPOWERNOTIFY Handle));
+	DECLARE_IMPORT_FUNCTION(HPOWERNOTIFY, WINAPI, RegisterPowerSettingNotification, HANDLE hRecipient, LPCGUID PowerSettingGuid, DWORD Flags);
+	DECLARE_IMPORT_FUNCTION(BOOL, WINAPI, UnregisterPowerSettingNotification, HPOWERNOTIFY Handle);
 
 	// virtdisk
-	DECLARE_IMPORT_FUNCTION(DWORD, WINAPI, GetStorageDependencyInformation, (HANDLE ObjectHandle, GET_STORAGE_DEPENDENCY_FLAG Flags, ULONG StorageDependencyInfoSize, PSTORAGE_DEPENDENCY_INFO StorageDependencyInfo, PULONG SizeUsed));
-	DECLARE_IMPORT_FUNCTION(DWORD, WINAPI, OpenVirtualDisk, (PVIRTUAL_STORAGE_TYPE VirtualStorageType, PCWSTR Path, VIRTUAL_DISK_ACCESS_MASK VirtualDiskAccessMask, OPEN_VIRTUAL_DISK_FLAG Flags, POPEN_VIRTUAL_DISK_PARAMETERS Parameters, PHANDLE Handle));
-	DECLARE_IMPORT_FUNCTION(DWORD, WINAPI, DetachVirtualDisk, (HANDLE VirtualDiskHandle, DETACH_VIRTUAL_DISK_FLAG Flags, ULONG ProviderSpecificFlags));
+	DECLARE_IMPORT_FUNCTION(DWORD, WINAPI, GetStorageDependencyInformation, HANDLE ObjectHandle, GET_STORAGE_DEPENDENCY_FLAG Flags, ULONG StorageDependencyInfoSize, PSTORAGE_DEPENDENCY_INFO StorageDependencyInfo, PULONG SizeUsed);
+	DECLARE_IMPORT_FUNCTION(DWORD, WINAPI, OpenVirtualDisk, PVIRTUAL_STORAGE_TYPE VirtualStorageType, PCWSTR Path, VIRTUAL_DISK_ACCESS_MASK VirtualDiskAccessMask, OPEN_VIRTUAL_DISK_FLAG Flags, POPEN_VIRTUAL_DISK_PARAMETERS Parameters, PHANDLE Handle);
+	DECLARE_IMPORT_FUNCTION(DWORD, WINAPI, DetachVirtualDisk, HANDLE VirtualDiskHandle, DETACH_VIRTUAL_DISK_FLAG Flags, ULONG ProviderSpecificFlags);
 
 	// rstrtmgr
-	DECLARE_IMPORT_FUNCTION(DWORD, WINAPI, RmStartSession, (DWORD *SessionHandle, DWORD SessionFlags, WCHAR strSessionKey[]));
-	DECLARE_IMPORT_FUNCTION(DWORD, WINAPI, RmEndSession, (DWORD dwSessionHandle));
-	DECLARE_IMPORT_FUNCTION(DWORD, WINAPI, RmRegisterResources, (DWORD dwSessionHandle, UINT nFiles, LPCWSTR rgsFilenames[], UINT nApplications, RM_UNIQUE_PROCESS rgApplications[], UINT nServices, LPCWSTR rgsServiceNames[]));
-	DECLARE_IMPORT_FUNCTION(DWORD, WINAPI, RmGetList, (DWORD dwSessionHandle, UINT *pnProcInfoNeeded, UINT *pnProcInfo, RM_PROCESS_INFO rgAffectedApps[], LPDWORD lpdwRebootReasons));
+	DECLARE_IMPORT_FUNCTION(DWORD, WINAPI, RmStartSession, DWORD *SessionHandle, DWORD SessionFlags, WCHAR strSessionKey[]);
+	DECLARE_IMPORT_FUNCTION(DWORD, WINAPI, RmEndSession, DWORD dwSessionHandle);
+	DECLARE_IMPORT_FUNCTION(DWORD, WINAPI, RmRegisterResources, DWORD dwSessionHandle, UINT nFiles, LPCWSTR rgsFilenames[], UINT nApplications, RM_UNIQUE_PROCESS rgApplications[], UINT nServices, LPCWSTR rgsServiceNames[]);
+	DECLARE_IMPORT_FUNCTION(DWORD, WINAPI, RmGetList, DWORD dwSessionHandle, UINT *pnProcInfoNeeded, UINT *pnProcInfo, RM_PROCESS_INFO rgAffectedApps[], LPDWORD lpdwRebootReasons);
 
 	// netapi32
-	DECLARE_IMPORT_FUNCTION(NET_API_STATUS, NET_API_FUNCTION, NetDfsGetInfo, (LPWSTR path, LPWSTR reserved_serv, LPWSTR reserved_share, DWORD level, LPBYTE *buff));
+	DECLARE_IMPORT_FUNCTION(NET_API_STATUS, NET_API_FUNCTION, NetDfsGetInfo, LPWSTR path, LPWSTR reserved_serv, LPWSTR reserved_share, DWORD level, LPBYTE *buff);
 
 #undef DECLARE_IMPORT_FUNCTION
 
